updated .docx and Makefile

--- a/schol.bib
+++ b/schol.bib
@@ -178,7 +178,7 @@
   doi      = "10.1038/543040e"
 }
 
-@ARTICLE{noauthor_undated-li,
+@ARTICLE{Ginsparg2017,
   title         = "Preprint D{\'e}j{\`a} Vu: an {FAQ}",
   author        = "Ginsparg, P",
   abstract      = "I give a brief overview of arXiv history, and describe the
