No slashes in my doi please...

--- a/schol.bib
+++ b/schol.bib
@@ -311,3 +311,98 @@
   pmid     = "27225100",
   doi      = "10.1038/533452a"
 }
+
+
+@ARTICLE{Breckels2018-ys,
+  title    = "A Bioconductor workflow for processing and analysing spatial
+              proteomics data",
+  author   = "Breckels, Lisa M and Mulvey, Claire M and Lilley, Kathryn S and
+              Gatto, Laurent",
+  abstract = "Spatial proteomics is the systematic study of protein
+              sub-cellular localisation. In this workflow, we describe the
+              analysis of a typical quantitative mass spectrometry-based
+              spatial proteomics experiment using the MSnbase and pRoloc
+              Bioconductor package suite. To walk the user through the
+              computational pipeline, we use a recently published experiment
+              predicting protein sub-cellular localisation in pluripotent
+              embryonic mouse stem cells. We describe the software
+              infrastructure at hand, importing and processing data, quality
+              control, sub-cellular marker definition, visualisation and
+              interactive exploration. We then demonstrate the application and
+              interpretation of statistical learning methods, including novelty
+              detection using semi-supervised learning, classification,
+              clustering and transfer learning and conclude the pipeline with
+              data export. The workflow is aimed at beginners who are familiar
+              with proteomics in general and spatial proteomics in particular.",
+  journal  = "F1000Res.",
+  volume   =  5,
+  month    =  jul,
+  year     =  2018,
+  keywords = "Bioconductor, R Package, proteomics, spatial proteomics, protein
+              sub-cellular localisation, mass spectromery, machine learning,
+              transfer learning",
+  doi      = "10.12688/f1000research.10411.2",
+  url      = "https://github.com/lmsimp/bioc-pRoloc-hyperLOPIT-workflow"
+}
+
+
+
+
+
+@ARTICLE{Gatto2014-wc,
+  title    = "Using {R} and Bioconductor for proteomics data analysis",
+  author   = "Gatto, Laurent and Christoforou, Andy",
+  abstract = "This review presents how R, the popular statistical environment
+              and programming language, can be used in the frame of proteomics
+              data analysis. A short introduction to R is given, with special
+              emphasis on some of the features that make R and its add-on
+              packages premium software for sound and reproducible data
+              analysis. The reader is also advised on how to find relevant R
+              software for proteomics. Several use cases are then presented,
+              illustrating data input/output, quality control, quantitative
+              proteomics and data analysis. Detailed code and additional links
+              to extensive documentation are available in the freely available
+              companion package RforProteomics. This article is part of a
+              Special Issue entitled: Computational Proteomics in the
+              Post-Identification Era. Guest Editors: Martin Eisenacher and
+              Christian Stephan.",
+  journal  = "Biochim. Biophys. Acta",
+  volume   =  1844,
+  number   = "1 Pt A",
+  pages    = "42--51",
+  month    =  jan,
+  year     =  2014,
+  keywords = "Data analysis statistics; Mass spectrometry; Quality control;
+              Quantitative proteomics; Software",
+  language = "en",
+  issn     = "0006-3002",
+  pmid     = "23692960",
+  doi      = "10.1016/j.bbapap.2013.04.032",
+  url      = "http://www.bioconductor.org/packages/release/data/experiment/vignettes/RforProteomics/inst/doc/RforProteomics.html"
+}
+
+
+
+@INCOLLECTION{Buckheit1995-yu,
+  title     = "{WaveLab} and Reproducible Research",
+  booktitle = "Wavelets and Statistics",
+  author    = "Buckheit, Jonathan B and Donoho, David L",
+  abstract  = "Wavelab is a library of wavelet-packet analysis, cosine-packet
+               analysis and matching pursuit. The library is available free of
+               charge over the Internet. Versions are provided for Macintosh,
+               UNIX and Windows machines. Wavelab makes available, in one
+               package, all the code to reproduce all the figures in our
+               published wavelet articles. The interested reader can inspect
+               the source code to see exactly what algorithms were used, how
+               parameters were set in producing our figures, and can then
+               modify the source to produce variations on our results. WAVELAB
+               has been developed, in part, because of exhortations by Jon
+               Claerbout of Stanford that computational scientists should
+               engage in ``really reproducible'' research.",
+  publisher = "Springer New York",
+  pages     = "55--81",
+  series    = "Lecture Notes in Statistics",
+  year      =  1995,
+  isbn      = "9780387945644, 9781461225447",
+  doi       = "10.1007/978-1-4612-2544-7_5"
+}
