Add more website references

--- a/schol.bib
+++ b/schol.bib
@@ -406,3 +406,37 @@
   isbn      = "9780387945644, 9781461225447",
   doi       = "10.1007/978-1-4612-2544-7_5"
 }
+
+
+@ARTICLE{Warren2018-cj,
+  title     = "First analysis of `pre-registered' studies shows sharp rise in
+               null findings",
+  author    = "Warren, Matthew",
+  abstract  = "Logging hypotheses and protocols before performing research
+               seems to work as intended: to reduce publication bias for
+               positive results. Logging hypotheses and protocols before
+               performing research seems to work as intended: to reduce
+               publication bias for positive results.",
+  journal   = "Nature",
+  publisher = "Nature Publishing Group",
+  month     =  oct,
+  year      =  2018,
+  issn      = "0028-0836",
+  doi       = "10.1038/d41586-018-07118-1"
+}
+
+@webpage{web:dora,
+  title =	 {{San Francisco Declaration on Research Assessment (DORA)}.},
+  url =		 {https://sfdora.org/}
+}
+
+
+@webpage{web:orcidletter,
+  title =	 {ORCiD Open letter on workflows},
+  url =		 {https://orcid.org/content/requiring-orcid-publication-workflows-open-letter}
+}
+
+@webpage{web:elifestack,
+  title = {Reproducible document stack from eLife},
+  url = {https://elifesciences.org/labs/7dbeb390/reproducible-document-stack-supporting-the-next-generation-research-article}
+  }
