few new entries

--- a/schol.bib
+++ b/schol.bib
@@ -159,7 +159,8 @@
   issn     = "1469-221X, 1469-3178",
   pmid     = "29650529",
   doi      = "10.15252/embr.201845731",
-  pmc      = "PMC5934772"
+  pmc      = "PMC5934772",
+  url      = {https://asntech.github.io/format-free-journals/}
 }
 
 @ARTICLE{Budd2017-gd,
@@ -440,3 +441,78 @@
   title = {Reproducible document stack from eLife},
   url = {https://elifesciences.org/labs/7dbeb390/reproducible-document-stack-supporting-the-next-generation-research-article}
   }
+
+@webpage{web:biochannel,
+  title = {Bioconductor gateway on F1000 Research},
+  url = {https://f1000research.com/gateways/bioconductor}
+  }
+
+
+@webpage{asap_letter,
+  title = {Open letter on the publication of peer review reports},
+  url = {http://asapbio.org/letter}
+  }
+
+
+
+
+@ARTICLE{Aizawa2016-lu,
+  title    = "Results of an attempt to reproduce the {STAP} phenomenon",
+  author   = "Aizawa, Shinichi",
+  abstract = "In 2014, Obokata and colleagues reported their observation of a
+              novel cell reprogramming phenomenon they named
+              'stimulus-triggered acquisition of pluripotency' (STAP). The most
+              conclusive evidence for the pluripotency of so-called STAP cells
+              was the purported ability of such cells to contribute to chimera
+              formation. Here, I report the results of an attempt by Haruko
+              Obokata to replicate the phenomenon under the supervision of the
+              Scientific Validity Examination Team of RIKEN. In this follow-up
+              study, putative STAP cells prepared by Haruko Obokata were
+              injected into 1051 embryos, of which 591 were recovered. However,
+              the injected cells made no significant contribution in any of the
+              embryos that developed.",
+  journal  = "F1000Res.",
+  volume   =  5,
+  pages    = "1056",
+  month    =  jun,
+  year     =  2016,
+  keywords = "ES; Oct-GFP; STAP; chimera; iPSCs; pluripotency; stem cells",
+  language = "en",
+  issn     = "2046-1402",
+  pmid     = "27610221",
+  doi      = "10.12688/f1000research.8731.2",
+  pmc      = "PMC4995676"
+}
+
+@ARTICLE{PLOS_Biology_Staff_Editors2018-jf,
+  title    = "The importance of being second",
+  author   = "{PLOS Biology Staff Editors}",
+  journal  = "PLoS Biol.",
+  volume   =  16,
+  number   =  1,
+  pages    = "e2005203",
+  month    =  jan,
+  year     =  2018,
+  language = "en",
+  issn     = "1544-9173, 1545-7885",
+  pmid     = "29377883",
+  doi      = "10.1371/journal.pbio.2005203",
+  pmc      = "PMC5788331"
+}
+
+
+@ARTICLE{Simons2008-fr,
+  title    = "The misused impact factor",
+  author   = "Simons, Kai",
+  journal  = "Science",
+  volume   =  322,
+  number   =  5899,
+  pages    = "165",
+  month    =  oct,
+  year     =  2008,
+  language = "en",
+  issn     = "0036-8075, 1095-9203",
+  pmid     = "18845714",
+  doi      = "10.1126/science.1165316",
+  extra    = {:DOI: 10.1234/567890}
+}
