Provide URL for arxiv paper

--- a/schol.bib
+++ b/schol.bib
@@ -199,7 +199,8 @@
   archivePrefix = "arXiv",
   eprint        = "1706.04188",
   primaryClass  = "cs.DL",
-  arxivid       = "1706.04188"
+  arxivid       = "1706.04188",
+  url      = "https://arxiv.org/abs/1706.04188"
 }
 
 @ARTICLE{Ginsparg2011-au,
@@ -453,6 +454,9 @@
   url = {http://asapbio.org/letter}
   }
 
+@webpage{web:codeocean,
+  title = {Nature Research journals trial new tools to enhance code peer review and publication},
+  url = "http://blogs.nature.com/ofschemesandmemes/2018/08/01/nature-research-journals-trial-new-tools-to-enhance-code-peer-review-and-publication"}
 
 
 
@@ -515,4 +519,30 @@
   pmid     = "18845714",
   doi      = "10.1126/science.1165316",
   extra    = {:DOI: 10.1234/567890}
+}
+
+
+@ARTICLE{Nosek2015-og,
+  title    = "Promoting an open research culture",
+  author   = "Nosek, B A and Alter, G and Banks, G C and Borsboom, D and
+              Bowman, S D and Breckler, S J and Buck, S and Chambers, C D and
+              Chin, G and Christensen, G and Contestabile, M and Dafoe, A and
+              Eich, E and Freese, J and Glennerster, R and Goroff, D and Green,
+              D P and Hesse, B and Humphreys, M and Ishiyama, J and Karlan, D
+              and Kraut, A and Lupia, A and Mabry, P and Madon, T A and
+              Malhotra, N and Mayo-Wilson, E and McNutt, M and Miguel, E and
+              Paluck, E Levy and Simonsohn, U and Soderberg, C and Spellman, B
+              A and Turitto, J and VandenBos, G and Vazire, S and Wagenmakers,
+              E J and Wilson, R and Yarkoni, T",
+  journal  = "Science",
+  volume   =  348,
+  number   =  6242,
+  pages    = "1422--1425",
+  month    =  jun,
+  year     =  2015,
+  language = "en",
+  issn     = "0036-8075, 1095-9203",
+  pmid     = "26113702",
+  doi      = "10.1126/science.aab2374",
+  pmc      = "PMC4550299"
 }
